@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: iCal-Parser
-version: 1.09
+version: 1.10
 author:
   - Rick Frankel, cpan@rickster.com
 abstract: Parse iCalendar files into a data structure
@@ -17,5 +17,5 @@ build_requires:
 provides:
   iCal::Parser:
     file: lib/iCal/Parser.pm
-    version: 1.09
+    version: 1.10
 generated_by: Module::Build version 0.2606
