@@ -9,4 +9,13 @@ DTSTAMP:20041113T220701Z
 RECURRENCE-ID;TZID=America/New_York:20041117T210000
 DURATION:PT1H
 END:VEVENT
+BEGIN:VEVENT
+DURATION:PT3H
+EXDATE;TZID=US/Mountain:20040203T190000
+UID:38EEC36E-2D8C-11D8-AB19-00306583A102-RID
+STATUS:CONFIRMED
+DTSTART;TZID=US/Mountain:20040203T190000
+SUMMARY:Tuesday SwingTime2
+RRULE:FREQ=WEEKLY;INTERVAL=1;UNTIL=20040207T065959Z;BYDAY=SA
+END:VEVENT
 END:VCALENDAR
